# arc

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/templates/: index.html
